# WHAMpy

./: .gitignore  README.md  example.py  pyproject.toml  wham_specification.md
whampy/: __init__.py  wham_errors.py  wham_solver.py
